--- a/package.json
+++ b/package.json
@@ -9,14 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^6.0.1",
+    "@mantine/core": "^6.0.1",
+    "@mantine/dates": "^6.0.1",
+    "@mantine/dropzone": "^6.0.1",
+    "@mantine/form": "^6.0.1",
+    "@mantine/hooks": "^6.0.1",
+    "@mantine/modals": "^6.0.1",
+    "@mantine/next": "^6.0.1",
+    "@mantine/notifications": "^6.0.1",
+    "@mantine/nprogress": "^6.0.1",
+    "@mantine/prism": "^6.0.1",
+    "@mantine/spotlight": "^6.0.1",
+    "@mantine/tiptap": "^6.0.1",
+    "@tabler/icons-react": "^2.10.0",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "4.9.5"
   }
 }
