--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^6.0.1",
     "@mantine/prism": "^6.0.1",
     "@mantine/spotlight": "^6.0.1",
+    "@mantine/ssr": "^6.0.1",
     "@mantine/tiptap": "^6.0.1",
     "@tabler/icons-react": "^2.10.0",
     "@tiptap/extension-link": "^2.0.0-beta.220",
